service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gcp-meetup-global
  name: gcp-meetup-global
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
    nodePort: 30015
  selector:
    app: gcp-meetup-global
  type: NodePort
